# docs/swagger.json
@@ -726,6 +726,13 @@
                         "description": "Number of items per page",
                         "name": "limit",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "default": "date",
+                        "description": "Sort by: date, clicks",
+                        "name": "sort",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1438,6 +1445,9 @@
         "internal_url.URLResponse": {
             "type": "object",
             "properties": {
+                "click_count": {
+                    "type": "integer"
+                },
                 "created_at": {
                     "type": "string"
                 },
